--- a/ScreenMusic.WebMvc/Views/Artist/Index.cshtml
+++ b/ScreenMusic.WebMvc/Views/Artist/Index.cshtml
@@ -21,8 +21,16 @@
     </a>
 </div>
 
+@if (TempData["ErrorMessage"] != null)
+{
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+        @TempData["ErrorMessage"]
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+}
+
 <div class="row">
-    @foreach (var artist in Model)
+    @foreach (var artist in Model.ToList())
     {
         <div class="col-sm-6 col-md-4 col-lg-3 mb-4">
             @await Html.PartialAsync("_CardArtist", artist)
