--- a/ScreenMusic.WebMvc/Views/Music/Index.cshtml
+++ b/ScreenMusic.WebMvc/Views/Music/Index.cshtml
@@ -20,6 +20,14 @@
     </a>
 </div>
 
+@if (TempData["ErrorMessage"] != null)
+{
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+        @TempData["ErrorMessage"]
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+}
+
 <div class="row">
     @foreach (var music in Model)
     {
