--- a/ScreenMusic.WebMvc/Views/Music/Update.cshtml
+++ b/ScreenMusic.WebMvc/Views/Music/Update.cshtml
@@ -1,4 +1,14 @@
-﻿@model InputUpdateMusic
+﻿@{
+    if (TempData["ErrorMessage"] != null)
+    {
+        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            @TempData["ErrorMessage"]
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    }
+}
+
+@model InputUpdateMusic
 @{
     ViewData["Title"] = "Edição de Música";
 }
@@ -17,13 +27,13 @@
     <form id="musicForm" asp-action="Update" method="post" enctype="multipart/form-data">
         <div class="form-group  mb-2">
             <label asp-for="Name">Nome</label>
-            <input asp-for="Name" class="form-control" placeholder="Nome da Música" required />
+            <input asp-for="Name" class="form-control" maxlength="200" placeholder="Nome da Música" required />
             <span asp-validation-for="Name" class="text-danger"></span>
         </div>
 
         <div class="form-group mb-2">
             <label asp-for="YoutubeLink">Link do Youtube</label>
-            <input asp-for="YoutubeLink" class="form-control" placeholder="Link do Youtube" required />
+            <input asp-for="YoutubeLink" class="form-control" maxlength="500" placeholder="Link do Youtube" required />
             <span asp-validation-for="YoutubeLink" class="text-danger"></span>
         </div>
 
@@ -35,7 +45,7 @@
                         <div class="input-group-prepend">
                             <span class="input-group-text"><i class="fas fa-calendar-alt"></i></span>
                         </div>
-                        <input asp-for="ReleaseYear" id="releaseYear" class="form-control" type="number" min="1900" max="@DateTime.Now.Year" placeholder="Ano de Lançamento" required />
+                        <input asp-for="ReleaseYear" id="releaseYear" class="form-control" type="number" max="@DateTime.Now.Year" placeholder="Ano de Lançamento" required />
                     </div>
                     <span asp-validation-for="ReleaseYear" class="text-danger"></span>
                 </div>
@@ -67,16 +77,6 @@
                 </div>
             </div>
         </div>
-
-        @if (ViewData.ModelState.ErrorCount > 0)
-        {
-            <div class="alert alert-danger">
-                @foreach (var error in ViewData.ModelState.Values.SelectMany(v => v.Errors))
-                {
-                    <p>@error.ErrorMessage</p>
-                }
-            </div>
-        }
     </form>
 </div>
 
