--- a/ScreenMusic.WebMvc/Views/Music/_CardMusic.cshtml
+++ b/ScreenMusic.WebMvc/Views/Music/_CardMusic.cshtml
@@ -9,15 +9,15 @@
         <a class="btn btn-warning" asp-action="Update" asp-controller="Music" asp-route-id="@Model.Id">
             <i class="bi bi-pencil-square"></i>
         </a>
-        <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#confirmDeleteModal">
+        <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#confirmDeleteModal-@Model.Id">
             <i class="bi bi-trash"></i>
         </button>
 
-        <div class="modal fade" id="confirmDeleteModal" tabindex="-1" aria-labelledby="confirmDeleteModalLabel" aria-hidden="true">
+        <div class="modal fade" id="confirmDeleteModal-@Model.Id" tabindex="-1" aria-labelledby="confirmDeleteModalLabel-@Model.Id" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="confirmDeleteModalLabel">Confirmar Exclusão</h5>
+                        <h5 class="modal-title" id="confirmDeleteModalLabel-@Model.Id">Confirmar Exclusão</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
@@ -25,7 +25,7 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-                        <form asp-action="Delete" asp-controller="Music" asp-route-id="@Model.Id">
+                        <form asp-action="Delete" asp-controller="Music" asp-route-id="@Model.Id" method="post">
                             <button type="submit" class="btn btn-danger">Confirmar Exclusão</button>
                         </form>
                     </div>
