--- a/ScreenMusic.WebMvc/Views/Artist/Create.cshtml
+++ b/ScreenMusic.WebMvc/Views/Artist/Create.cshtml
@@ -1,4 +1,14 @@
-﻿@model InputCreateArtist
+﻿@{
+    if (TempData["ErrorMessage"] != null)
+    {
+        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            @TempData["ErrorMessage"]
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    }
+}
+
+@model InputCreateArtist
 @{
     ViewData["Title"] = "Cadastro do Artista";
 }
@@ -17,41 +27,26 @@
     <form id="artistForm" asp-action="Create" method="post" enctype="multipart/form-data" style="font-size: 18px">
         <div class="form-group mb-2">
             <label asp-for="Name">Nome</label>
-            <input asp-for="Name" class="form-control" placeholder="Nome do Artista" required />
+            <input asp-for="Name" class="form-control" maxlength="100" placeholder="Nome do Artista" required />
             <span asp-validation-for="Name" class="text-danger"></span>
         </div>
 
         <div class="form-group mb-2 tex">
             <label asp-for="Biography">Biografia</label>
-            <textarea asp-for="Biography" class="form-control" placeholder="Biografia do artista" rows="4" required></textarea>
+            <textarea asp-for="Biography" class="form-control" maxlength="500" placeholder="Biografia do artista" rows="4" required></textarea>
             <span asp-validation-for="Biography" class="text-danger"></span>
         </div>
 
         <div class="form-group mb-2">
             <label for="profilePhotoFile">Foto de Perfil</label>
             <div class="custom-file">
-                <input type="file" class="custom-file-input" id="profilePhotoFile" name="profilePhotoFile" accept=".jpeg,.jpg,.png" onchange="previewImage(event)" />
+                <input type="file" class="custom-file-input" id="profilePhotoFile" name="profilePhotoFile" required accept=".jpeg,.jpg,.png" onchange="previewImage(event)" />
                 <label class="custom-file-label" for="profilePhotoFile">Escolher arquivo</label>
             </div>
             <div class="mt-3">
                 <img id="profilePhotoPreview" src="#" alt="Preview da imagem" class="img-thumbnail d-none" style="max-width: 200px;" />
             </div>
         </div>
-
-        @if (ViewData.ModelState.ErrorCount > 0)
-        {
-            <div class="alert alert-danger">
-                @foreach (var error in ViewData.ModelState.Values.SelectMany(v => v.Errors))
-                {
-                    <p>@error.ErrorMessage</p>
-                }
-            </div>
-        }
-
-        @* <div class="d-flex justify-content-between align-items-center mt-4">
-            <a class="btn btn-info" asp-action="Index" asp-controller="Artist">Voltar</a>
-            <button type="submit" class="btn btn-primary ml-auto">Cadastrar</button>
-        </div> *@
     </form>
 </div>
 
