--- a/ScreenMusic.WebMvc/Views/MusicGenre/Create.cshtml
+++ b/ScreenMusic.WebMvc/Views/MusicGenre/Create.cshtml
@@ -1,4 +1,14 @@
-﻿@model InputCreateMusicGenre
+﻿@{
+    if (TempData["ErrorMessage"] != null)
+    {
+        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            @TempData["ErrorMessage"]
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    }
+}
+
+@model InputCreateMusicGenre
 @{
     ViewData["Title"] = "Cadastro do Gênero Musical";
 }
@@ -17,24 +27,14 @@
     <form id="musicGenreForm" asp-action="Create" method="post" enctype="multipart/form-data">
         <div class="form-group">
             <label asp-for="Name">Nome</label>
-            <input asp-for="Name" class="form-control" placeholder="Nome do gênero musical" required />
+            <input asp-for="Name" class="form-control" maxlength="100" placeholder="Nome do gênero musical" required />
             <span asp-validation-for="Name" class="text-danger"></span>
         </div>
 
         <div class="form-group">
             <label asp-for="Description">Descrição</label>
-            <textarea asp-for="Description" class="form-control" placeholder="Descrição do gênero musical" rows="4" required></textarea>
+            <textarea asp-for="Description" class="form-control" maxlength="300" placeholder="Descrição do gênero musical" rows="4" required></textarea>
             <span asp-validation-for="Description" class="text-danger"></span>
-        </div>        
-
-        @if (ViewData.ModelState.ErrorCount > 0)
-        {
-            <div class="alert alert-danger">
-                @foreach (var error in ViewData.ModelState.Values.SelectMany(v => v.Errors))
-                {
-                    <p>@error.ErrorMessage</p>
-                }
-            </div>
-        }
+        </div>
     </form>
 </div>
