--- a/ScreenMusic.WebMvc/Views/Shared/_Layout.cshtml
+++ b/ScreenMusic.WebMvc/Views/Shared/_Layout.cshtml
@@ -13,9 +13,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body style="background-color: #3e3e3e;">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-3 col-lg-2 sidebar">
+    <div class="container-fluid">
+        <div class="row flex-nowrap">
+            <div class="col-auto col-md-3 col-lg-2 px-sm-2 px-0 sidebar">
                 <h4 class="nav-link">ScreenMusic</h4>
                 <ul class="nav flex-column">
                     <li class="nav-item">
@@ -41,7 +41,7 @@
                 </ul>
             </div>
 
-            <main role="main" class="col-md-9 col-lg-10 ml-sm-auto col-xl-10 content">
+            <main role="main" class="col px-0 flex-grow-1 content">
                 <div class="container pt-3">
                     @RenderBody()
                 </div>
