--- a/ScreenMusic.Web/Pages/UpdateArtist.razor
+++ b/ScreenMusic.Web/Pages/UpdateArtist.razor
@@ -15,6 +15,8 @@
 
             <MudTextField Class="mt-4" T="string" Placeholder="Biografia do artista" Variant="Variant.Outlined" @bind-Value="biography" Lines="4" Required="true" RequiredError="Campo obrigatório." />
 
+            <MudRating Class="mt-4" @bind-SelectedValue="rating" @onclick="Review" />
+
             <div class="d-flex justify-space-between align-center mt-4">
                 <MudButton Variant="Variant.Filled" Color="Color.Info" @onclick="Return">Voltar</MudButton>
                 <div>
@@ -34,6 +36,7 @@ else
 @code {
     private string? name;
     private string? biography;
+    private int rating;
     public OutputArtist? Artist { get; set; }
 
     [Parameter]
@@ -54,13 +57,20 @@ else
 
     private async Task Update()
     {
-        var requestEdit = new InputUpdateArtist(Artist!.ProfilePhoto!, biography!);
-        await artistServiceClient.Update(Artist!.Id, requestEdit);
+        var inputUpdateArtist = new InputUpdateArtist(Artist!.ProfilePhoto!, biography!);
+        await artistServiceClient.Update(Artist!.Id, inputUpdateArtist);
+        navigationManager.NavigateTo("/Artist");
+    }
+
+    private async Task Review()
+    {
+        var inputReviewArtist = new InputReviewArtist(rating);
+        await artistServiceClient.Review(Artist!.Id, inputReviewArtist);
         navigationManager.NavigateTo("/Artist");
     }
 
     private void Return()
     {
         navigationManager.NavigateTo("/Artist");
-    }
+    }    
 }
