feat(telas genero musical e ajustes)

--- a/ScreenMusic.Web/Components/CardArtist.razor
+++ b/ScreenMusic.Web/Components/CardArtist.razor
@@ -2,18 +2,18 @@
 ﻿<MudCard>
     <MudCardMedia Image="@Image"></MudCardMedia>
     <MudCardHeader>
-    <CardHeaderContent>
-        <MudText Typo="Typo.h6">@Artist!.Name</MudText>
-        </CardHeaderContent>
-    </MudCardHeader>
-    <MudCardContent>
-        <MudText Typo="Typo.body2">@Artist!.Biography</MudText>
-        <MudRating SelectedValue="@Convert.ToInt32(Artist!.Classification)" />
-    </MudCardContent>
-    <MudCardActions>
-        <MudButton Color="Color.Warning" Variant="Variant.Outlined" Href=@($"/UpdateArtist/{Artist!.Name}")>Detalhes</MudButton>
-    </MudCardActions>
-</MudCard>
+        <CardHeaderContent>
+            <MudText Typo="Typo.h6">@Artist!.Name</MudText>
+            </CardHeaderContent>
+        </MudCardHeader>
+        <MudCardContent>
+            <MudText Typo="Typo.body2">@Artist!.Biography</MudText>
+            <MudRating SelectedValue="@Convert.ToInt32(Artist!.Classification)" ReadOnly="true" Class="mt-2" />
+        </MudCardContent>
+        <MudCardActions>
+            <MudButton Color="Color.Warning" Variant="Variant.Outlined" Href=@($"/UpdateArtist/{Artist!.Name}")>Detalhes</MudButton>
+        </MudCardActions>
+    </MudCard>
 
     @code {
     [Parameter]
