--- a/ScreenMusic.Web/Layout/NavMenu.razor
+++ b/ScreenMusic.Web/Layout/NavMenu.razor
@@ -6,8 +6,7 @@
         <MudNavLink Href="/CreateArtist">Cadastrar</MudNavLink>
     </MudNavGroup>
     <MudNavGroup Title="Músicas" Icon="@Icons.Material.Filled.QueueMusic" Expanded="true">
-        <MudNavLink Href="/MusicByArtist">Músicas por artista</MudNavLink>
-        <MudNavLink Href="/MusicByMusicGenre">Músicas por gênero</MudNavLink>
+        <MudNavLink Href="/Music">Músicas por artista</MudNavLink>
         <MudNavLink Href="/CreateMusic">Cadastrar</MudNavLink>
     </MudNavGroup>
     <MudNavGroup Title="Gêneros Musicais" Icon="@Icons.Material.Filled.LibraryMusic" Expanded="true">
