--- a/ScreenMusic.Web/Pages/UpdateArtist.razor
+++ b/ScreenMusic.Web/Pages/UpdateArtist.razor
@@ -11,11 +11,14 @@
 
         <MudForm>
 
-            <MudTextField Class="mt-4" T="string" Placeholder="Nome do Artista" Variant="Variant.Outlined" @bind-Value="name" Required="true" RequiredError="Campo obrigatório." />
+            <MudTextField Class="mt-4" T="string" Placeholder="Nome do Artista" ReadOnly="true" Variant="Variant.Outlined" @bind-Value="name" Required="true" RequiredError="Campo obrigatório." />
 
             <MudTextField Class="mt-4" T="string" Placeholder="Biografia do artista" Variant="Variant.Outlined" @bind-Value="biography" Lines="4" Required="true" RequiredError="Campo obrigatório." />
-
-            <MudRating Class="mt-4" @bind-SelectedValue="rating" @onclick="Review" />
+            
+            <div class="mt-4">
+                <MudText>Deixe sua avaliação:</MudText>
+                <MudRating @bind-SelectedValue="rating" @onclick="Review" />
+            </div>            
 
             <div class="d-flex justify-space-between align-center mt-4">
                 <MudButton Variant="Variant.Filled" Color="Color.Info" @onclick="Return">Voltar</MudButton>
@@ -38,15 +41,18 @@ else
     private string? biography;
     private int rating;
     public OutputArtist? Artist { get; set; }
+    public OutputArtistReview? ArtistReview { get; set; }
 
     [Parameter]
     public string? Name { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
-        Artist = await artistServiceClient.GetByName(new InputIdentifierArtist(Name!));
+        Artist = await artistServiceClient.GetByIdentifier(new InputIdentifierArtist(Name!));
+        ArtistReview = await artistServiceClient.GetReview(Artist!.Id);
         name = Artist!.Name;
         biography = Artist!.Biography;
+        rating = ArtistReview!.Rating ?? 0;
     }
 
     private async Task Delete()
@@ -66,7 +72,6 @@ else
     {
         var inputReviewArtist = new InputReviewArtist(rating);
         await artistServiceClient.Review(Artist!.Id, inputReviewArtist);
-        navigationManager.NavigateTo("/Artist");
     }
 
     private void Return()
