--- a/ScreenMusic.Web/Pages/UpdateMusicGenre.razor
+++ b/ScreenMusic.Web/Pages/UpdateMusicGenre.razor
@@ -11,7 +11,7 @@
 
         <MudForm>
 
-            <MudTextField Class="mt-4" T="string" Placeholder="Nome do Gênero Musical" Variant="Variant.Outlined" @bind-Value="name" Required="true" RequiredError="Campo obrigatório." />
+            <MudTextField Class="mt-4" T="string" Placeholder="Nome do Gênero Musical" ReadOnly="true" Variant="Variant.Outlined" @bind-Value="name" Required="true" RequiredError="Campo obrigatório." />
 
             <MudTextField Class="mt-4" T="string" Placeholder="Descrição do Gênero Musical" Variant="Variant.Outlined" @bind-Value="description" Lines="4" Required="true" RequiredError="Campo obrigatório." />
 
